modules/infra-argo/templates/manifests/gateway_api/gateway.tftmpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: ${argo_cd_helm_release_namespace}
spec:
  gatewayClassName: cloudflare
  listeners:
    - name: http
      protocol: HTTP
      port: 80
