modules/infra-argo/templates/manifests/gateway_api/httproute.tftmpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: ${argo_cd_helm_release_namespace}
spec:
  parentRefs:
    - name: argocd
      namespace: ${argo_cd_helm_release_namespace}
  hostnames:
    - "${argocd_ingress_domain}"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
